static/css/style.css
/* ... */
.content .col-md-4 .content-img {
    position: relative;
}

.content .content-post-title {
    width: 100%;
    position: absolute;
    display: block;
    bottom: 0;
    left: 0;
    color: #fff;
    padding: 25px;
    background-color: #686e9f94;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

/*=============== Login ===============*/
.vertical-center {
    min-height: 74vh;
    display: flex;
    align-items: center;
}

.card-signup {
    border-radius: 1rem;
    border: 0;
}

/*=============== Profile ===============*/
.profile-img {
    max-height: 300px;
    max-width: 250px;
    clip-path: circle();
}

.icon {
    color: var(--blue-color);
    background-color: #e48153e3;
    border-radius: 50%;
    padding: 8px;
}

.icon:hover {
    background-color: var(--orange-color);
    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
}

.icon-save {
    padding-right: 5px;
}

.user-comment p {
    margin-bottom: 0;
}

.highlight-heading {
    background: linear-gradient(120deg, #f5d1b7 0%, #f5d1b7 100%);
    background-repeat: no-repeat;
    background-size: 100% 40%;
    background-position: 0 90%;
}

/*=============== About ===============*/
.about-picture {
    height: 100%;
    border-radius: 1rem 0 0 1rem;
}

/*=============== Error Page ===============*/
.error-picture {
    height: 100%;
    border-radius: 0rem 0 1rem 1rem;
}

/*=============== Post List ===============*/
.post-form {
    padding: 2em 1.4em;
}

.post-list-content {
    margin-top: 5.5em;
    margin-bottom: 3em;
    max-width: 100%;
}

.post-card {
    margin-bottom: 1em;
    background-color: var(--white-color);
    border: none;
}

.post-card .card-body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.btn-read,
.btn-save {
    background-color: var(--orange-color);
    color: var(--white-color);
}

.btn-read:hover,
.btn-save:hover {
    background-color: #dd7342;
    color: var(--white-color);
}

.post-detail-list>a {
    margin-right: 1em;
}

.card-img-top {
    height: 10rem;
}

.page-link {
    color: var(--blue-color)
}

.active>.page-link {
    background-color: var(--orange-color);
    border: none;
}

#post-list .bg-secondary,
#profile .bg-secondary {
    background-color: var(--blue-color) !important;
    opacity: .9;
}

/*=============== Post Detail ===============*/
select {
    height: 100px;
    width: 130px;
}

tr td:first-child {
    width: 30%;
}

#likes-count {
    margin: 0 0 0 .3rem;
}

.post-detail-card {
    -webkit-box-shadow: 0px 0px 10px 1px rgba(93, 93, 93, 0.64);
    box-shadow: 0px 0px 10px 1px rgba(93, 93, 93, 0.64);
    border-color: var(--blue-color);
    background-image: linear-gradient(to bottom, #fbe4a1, #fde5af, #fde7bc, #fce9ca, #faebd7);
    padding-bottom: 1rem;
}

.post-detail-list {
    color: var(--blue-color);
    background-color: var(--white-color);
}

.comment {
    border-color: var(--orange-color);
    background-color: #fbe4a187;
}

.post-detail-card .img-fluid {
    border-top-left-radius: .375rem;
    border-top-right-radius: .375rem;
}

.table-post-card td {
    padding: .5rem .8rem;
}

.post-detail-card .icon {
    margin: .8rem;
}

.input-comment {
    width: 90%;
    max-width: 90%;
    max-height: 30%;
}

.delete-comment button:active {
    border: hidden;
}

/*=============== Bucket List ===============*/

.bucket-list {
    border-radius: 1rem;
    border: 0;
}

.bucket-list .form-check-label {
    padding: 0.2rem 0 .2rem .6rem;
}

.bucket-list .form-check-label a {
    text-decoration: none;
}

.bucket-list .form-check-label p {
    color: var(--blue-color);
}

.bucket-list .list-group-item {
    background-color: #fdd99b;
    margin-bottom: 1rem;
    box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
    border: none;
    border-radius: inherit;
    transition: all .4s ease;
}

.bucket-list .list-group-item:hover {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

/*=============== Media Queries ===============*/
@media only screen and (max-width: 1000px) {
    .search-box {
        width: 40% !important
    }

    #profile .profile-img {
        max-width: 200px;
    }
}

@media only screen and (max-width: 930px) {
    .search-box {
        width: 30% !important
    }
}


@media only screen and (max-width: 767px) {
    .logo {
        position: relative;
        transform: none;
        left: auto;
    }

    .navbar-collapse .login {
        align-items: flex-start !important;
        border-top: 1px solid var(--blue-color);
        padding-top: .2rem;
    }

    .navbar-toggler {
        margin: 5px 0 5px 0;
    }

    .search-box {
        width: auto !important;
        padding-top: .2em;
    }

    #profile .profile-img {
        max-width: 250px;
    }

    .footer .row:first-child {
        display: none
    }

}

@media only screen and (max-width: 454px) {
    .carousel-caption {
        text-align: center;
    }

    .hero-content {
        top: 50%;
    }
}

